src/middleware/snapshots/axum_tracing_opentelemetry__middleware__trace_extractor__tests__empty_http_route_for_nonexisting_route.snap
---
source: src/middleware/trace_extractor.rs
expression: tracing_events
---
- fields:
    message: new
  level: INFO
  span:
    http.client_ip: ""
    http.flavor: "1.1"
    http.host: ""
    http.method: GET
    http.route: ""
    http.scheme: HTTP
    http.target: /idontexist/123
    http.user_agent: ""
    name: HTTP request
    otel.kind: server
    otel.name: GET
    trace_id: "[trace_id:lg32]"
  spans: []
  target: "axum_tracing_opentelemetry::middleware::trace_extractor"
  timestamp: "[timestamp]"
- fields:
    message: close
    time.busy: "[duration]"
    time.idle: "[duration]"
  level: INFO
  span:
    http.client_ip: ""
    http.flavor: "1.1"
    http.host: ""
    http.method: GET
    http.route: ""
    http.scheme: HTTP
    http.status_code: "404"
    http.target: /idontexist/123
    http.user_agent: ""
    name: HTTP request
    otel.kind: server
    otel.name: GET
    otel.status_code: OK
    trace_id: "[trace_id:lg32]"
  spans: []
  target: "axum_tracing_opentelemetry::middleware::trace_extractor"
  timestamp: "[timestamp]"

