src/middleware/snapshots/axum_tracing_opentelemetry__middleware__trace_extractor__tests__extract_route_from_nested.snap
---
source: src/middleware/trace_extractor.rs
expression: "events[event_idx]"
---
fields:
  message: new
level: INFO
span:
  http.client_ip: ""
  http.flavor: "1.1"
  http.host: ""
  http.method: GET
  http.route: "/nest/:nest_id"
  http.scheme: HTTP
  http.target: /nest/123
  http.user_agent: ""
  name: HTTP request
  otel.kind: server
  otel.name: "GET /nest/:nest_id"
  trace_id: "[trace_id:lg32]"
spans: []
target: "axum_tracing_opentelemetry::middleware::trace_extractor"
timestamp: "[timestamp]"

