src/middleware/snapshots/axum_tracing_opentelemetry__middleware__trace_extractor__tests__grpc_status_code_on_close_for_ok.snap
---
source: src/middleware/trace_extractor.rs
expression: tracing_events
---
- fields:
    message: new
  level: INFO
  span:
    http.client_ip: ""
    http.flavor: "1.1"
    http.host: ""
    http.method: POST
    http.route: /module.service/endpoint1
    http.scheme: HTTP
    http.target: /module.service/endpoint1
    http.user_agent: ""
    name: grpc request
    otel.kind: server
    otel.name: /module.service/endpoint1
    trace_id: "[trace_id:lg32]"
  spans: []
  target: "axum_tracing_opentelemetry::middleware::trace_extractor"
  timestamp: "[timestamp]"
- fields:
    message: close
    time.busy: "[duration]"
    time.idle: "[duration]"
  level: INFO
  span:
    http.client_ip: ""
    http.flavor: "1.1"
    http.grpc_status: 2
    http.host: ""
    http.method: POST
    http.route: /module.service/endpoint1
    http.scheme: HTTP
    http.status_code: "200"
    http.target: /module.service/endpoint1
    http.user_agent: ""
    name: grpc request
    otel.kind: server
    otel.name: /module.service/endpoint1
    otel.status_code: OK
    trace_id: "[trace_id:lg32]"
  spans: []
  target: "axum_tracing_opentelemetry::middleware::trace_extractor"
  timestamp: "[timestamp]"

